# fast-nav

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
fastnav/: __init__.py  compose.py  dagger.py  kinematics.py  policy.py  ppo.py  puffer_env.py  render.py  scene.py  sim.py  videos.py
scripts/: bench.py  collect_demos.py  commitment_probe.py  continuation_test.py  deploy_web.sh  download_procthor.py  eval_checkpoints.py  expand_rays.py  export_web.py  failure_taxonomy.py  noise_sweep.py  policy_mosaic.py  preprocess_procthor.py  preprocess_replicacad.py  render_mosaic.py  reset_trigger_bench.py  safety_report.py  sweep.py  throughput_chart.py  train_dagger.py  train_ppo.py
tests/: test_cores.py  test_correctness.py  test_heads.py
web/: index.html  policies.json  policy.json
web/js/: app.js  policy.js  sim.js
web/test/: parity.mjs
