[project]
name = "fast-nav"
version = "0.1.0"
description = "Ultra-fast 2D-lidar indoor navigation playground on Apple GPU (MLX + Metal)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.18.0",
    "matplotlib>=3.10.9",
    "mlx>=0.31.2",
    "numpy>=1.26,<2.0",
    "opencv-python>=4.9",
    "pufferlib==3.0.0",
    "scipy>=1.17.1",
    "trimesh>=4.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastnav"]
